# fly

./: .gitignore  Class Concepts.md  README.md  TC_AERO_APP  app.py  classes.py  cli_app.py  hi.py  main.py  mission_waypoints.csv  modules.py  pyproject.toml  relative_movement.py  requirements.txt  settings.json  states.json  test.py
Tuts/: takeoff_and_land.py
examples/: mission_waypoints.json  test.json
examples/mavsdk_examples/: offboard_position_ned.py
fly/: LICENSE  pyvenv.cfg  requirements.txt
fly/mission_files/: mission_waypoints.json
mavsdk_docs/: action.md  action_server.md  arm_authorizer_server.md  calibration.md  camera.md  camera_server.md  component_information.md  component_information_server.md  component_metadata.md  component_metadata_server.md  core.md  events.md  failure.md  follow_me.md  ftp.md  ftp_server.md  genindex.md  geofence.md  gimbal.md  gripper.md  index.md  info.md  jetson-nano-install.md  log_files.md  log_streaming.md  manual_control.md  mavlink_direct.md  mission.md  mission_raw.md  mission_raw_server.md  mocap.md  offboard.md  param.md  param_server.md  py-modindex.md  rtk.md  search.md  server_utility.md  shell.md  system.md  (+6 more)
mibombo/: test.py
mission_files/: mission_waypoints.json
practice_files/: create_mission.py  offboard_assignment.py  test.py
pyqt6/: app.py
src/fly/comms/: __init__.py  protocol.py  streamCapture.py
src/fly/config/: settings.json
src/fly/core/: dataManager.py  drone.py  mission.py  missionEditor.py  resumeManager.py
src/fly/interfaces/: TC_AERO_APP.py  app.py  cli.py  gui.py
(+26 files in other folders)
