[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fly"
version = "0.1.0"
description = "Drone control from Aero workspace"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mavsdk",
    "PyQt6",
    "qasync",
    "asyncclick",
    "numpy",
    "pymap3d",
    "geographiclib",
    "haversine",
    "aiofiles",
    "opencv-python-headless",
]

[project.scripts]
aero_cli = "fly.interfaces.cli:main"
aero_gui = "fly.interfaces.gui:main"


[tool.setuptools.packages.find]
where = ["src"]
